# chessington

./: .gitignore  LICENSE  ProgressRing.png.import  README.md  ai.jpeg.import  background.jpeg.import  camera.gdns  main.tscn  player.tscn  project.godot  wall.tscn
images/: player_body.png.import  player_eye.png.import
native/: CMakeLists.txt  bouncy.gdnlib  camera.cpp  camera.h  chess_request.py  chessboard.cpp  chessboard.h  fishstock.cpp  processing.cpp  processing.h  wrapper.c
scripts/: Camera.gd  Gameplay.gd  ItemList.gd  Player.gd  Shadow.gd
